--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,14 @@
 
 
         <EditText
+            android:inputType="textEmailAddress"
             android:id="@+id/login_email_txt"
             android:hint="@string/email_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <EditText
+            android:inputType="textPassword"
             android:id="@+id/login_pwd_txt"
             android:layout_below="@+id/login_email_txt"
             android:hint="@string/password_hint"
