--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
 
 
@@ -11,7 +12,7 @@
             android:id="@+id/login_email_txt"
             android:hint="@string/email_hint"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" android:gravity="center"/>
 
         <EditText
 
@@ -20,7 +21,7 @@
             android:layout_below="@+id/login_email_txt"
             android:hint="@string/password_hint"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" android:gravity="center"/>
 
 
 
