--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,46 +18,77 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <TextView
-            android:textColor="@color/colorAccent"
-            android:text="@string/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:textSize="25sp"
-            android:layout_gravity="start"/>
-        <LinearLayout
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
             <TextView
-                android:text="@string/subtitle"
-                android:layout_weight="1"
-                android:layout_width="0dp"
+                android:textColor="@color/colorAccent"
+                android:text="@string/user"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/textView"
+                android:textSize="25sp"
+                android:layout_gravity="start"/>
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="@string/course"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:layout_gravity="start"/>
+
+                <TextView
+                    android:text="@string/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:gravity="end"/>
+            </LinearLayout>
+            <TextView
+
+                android:text="@string/address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textAddress"
                 android:textSize="18sp"
                 android:layout_gravity="start"/>
 
             <TextView
-                android:text="@string/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tel"
+                android:id="@+id/textTel"
+                android:textSize="18sp"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right">
+
+            <Button
+                style ="@style/Widget.AppCompat.Button.Borderless"
+                android:id="@+id/activity_go_btn"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginTop="5dp"
+                android:text="@string/btn_go"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:gravity="end"/>
+                android:layout_gravity="end"/>
+
+            <Button
+                style ="@style/Widget.AppCompat.Button.Borderless"
+                android:id="@+id/activity_call_btn"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginTop="5dp"
+                android:text="@string/btn_call"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"/>
         </LinearLayout>
-        <TextView
-            android:text="@string/content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
-            android:textColor="@color/colorPrimary"
-            android:layout_marginTop="5dp"
-            android:text="@string/btn_read"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"/>
         </LinearLayout>
 
     </LinearLayout>
