--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,39 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
 
+    <android.support.design.widget.TextInputLayout
+        android:layout_marginTop="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!-- Email Label -->
+        <android.support.v7.widget.AppCompatEditText
 
-
-
-        <EditText
-            android:inputType="textEmailAddress"
+            android:layout_margin="10dp"
             android:id="@+id/login_email_txt"
-            android:hint="@string/email_hint"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:gravity="center"/>
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:hint="Email"/>
 
-        <EditText
-
-            android:inputType="textPassword"
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!-- Password Label -->
+        <android.support.v7.widget.AppCompatEditText
+            android:layout_margin="10dp"
             android:id="@+id/login_pwd_txt"
-            android:layout_below="@+id/login_email_txt"
-            android:hint="@string/password_hint"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:gravity="center"/>
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="Password"/>
 
-
-
-
-        <TextView
+        <android.support.v7.widget.AppCompatButton
+            android:layout_margin="8dp"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorPrimaryDark"
             android:id="@+id/login_log_btn"
-            android:textAlignment="center"
-            android:text="@string/login_hint"
-            android:background="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_alignParentBottom="true"/>
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            android:padding="12dp"
+            android:text="Login"/>
 
-</RelativeLayout>
+    </android.support.design.widget.TextInputLayout>
+</LinearLayout>
