--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,95 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/linear_main_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:weightSum="1">
-    <LinearLayout
-        android:layout_margin="20dp"
+    android:orientation="vertical">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:src="@drawable/ic_add"
+        android:tint="@color/colorWhite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        app:backgroundTint="@color/colorAccent2" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/layout_main_activity"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-        <LinearLayout
-            android:padding="10dp"
-            android:background="@color/back"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:textColor="@color/colorAccent"
-                android:text="@string/user"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView"
-                android:textSize="25sp"
-                android:layout_gravity="start"/>
-            <LinearLayout
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
 
-                <TextView
-                    android:text="@string/course"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:layout_gravity="start"/>
-
-                <TextView
-                    android:text="@string/date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:gravity="end"/>
-            </LinearLayout>
-            <TextView
-
-                android:text="@string/address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textAddress"
-                android:textSize="18sp"
-                android:layout_gravity="start"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/tel"
-                android:id="@+id/textTel"
-                android:textSize="18sp"/>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right">
-
-            <Button
-                style ="@style/Widget.AppCompat.Button.Borderless"
-                android:id="@+id/activity_go_btn"
-                android:textColor="@color/colorPrimary"
-                android:layout_marginTop="5dp"
-                android:text="@string/btn_go"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"/>
-
-            <Button
-                style ="@style/Widget.AppCompat.Button.Borderless"
-                android:id="@+id/activity_call_btn"
-                android:textColor="@color/colorPrimary"
-                android:layout_marginTop="5dp"
-                android:text="@string/btn_call"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"/>
-        </LinearLayout>
-        </LinearLayout>
-
-    </LinearLayout>
-</ScrollView>
+</RelativeLayout>
