--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+   <!-- <color name="colorAccent">#FF4081</color>-->
+    <color name="colorWhite">#FFF</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent2">#FF4081</color>
     <color name="back">#efeff1</color>
 </resources>
